<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF7F27"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/shops_word"
        android:textColor="#F6A901"
        android:textSize="30dp" />

    <TextView 
        android:id="@+id/books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:layout_centerInParent="true"
        android:textColor="#FEDB99"
       	android:textSize="20dp"
       	android:text="@string/shops_shop_books" />
    
    <TextView
        android:id="@+id/live_things"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_above="@id/books"	
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="60dp"
        android:textSize="20dp" 
        android:text="@string/shops_shop_live"
        android:textColor="#5B367C" />
    
    <TextView
        android:id="@+id/stud_things"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/live_things"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:textSize="20dp"
        android:text="@string/shops_shop_students"
        android:textColor="#37AEEB" />
    
    <TextView
        android:id="@+id/el_things"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/books"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="60dp"
        android:textColor="#C74A50"
        android:textSize="20dp"
        android:text="@string/shops_shop_electricty" />
    
    <TextView
        android:id="@+id/accessories_things"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/el_things"
		android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:textColor="#17152A"
        android:textSize="20dp"
        android:text="@string/shops_shop_accessories" />

    
</RelativeLayout>