<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

		<TableRow
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center" >
		    
		    <TextView
		        android:id="@+id/menu_lea"
		        style="@style/menu_item_txt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="5dp"
		        android:layout_marginLeft="6dp"
		        android:layout_marginRight="5dp"
		        android:layout_marginTop="5dp"
		        android:drawableTop="@drawable/menu_learn"
		        android:text="@string/learns_word" />
		
		    <TextView
		        android:id="@+id/menu_s"
		        style="@style/menu_item_txt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="5dp"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="6dp"
		        android:layout_marginTop="5dp"
		        android:drawableTop="@drawable/menu_shop"
		        android:text="@string/shops_word" />
	
		</TableRow>
		
		<TableRow
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:layout_gravity="center">

			<TextView
			    android:id="@+id/menu_te"
			    style="@style/menu_item_txt01"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="5dp"
			    android:layout_marginLeft="6dp"
			    android:layout_marginRight="5dp"
			    android:layout_marginTop="5dp"
			    android:drawableTop="@drawable/menu_teachers"
			    android:text="@string/teachers_word" />

			<TextView
		        android:id="@+id/menu_les"
		        style="@style/menu_item_txt01"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="5dp"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="6dp"
		        android:layout_marginTop="5dp"
		        android:drawableTop="@drawable/menu_lessons"
		        android:text="@string/lessons_word" />
			
	    </TableRow>
	    
		<TableRow
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center">
		
		    <TextView
		        android:id="@+id/menu_li"
		        style="@style/menu_item_txt02"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="6dp"
		        android:layout_marginRight="5dp"
		        android:drawableTop="@drawable/menu_live"
		        android:text="@string/lives_word" />
		
		    <TextView
		        android:id="@+id/menu_th"
		        style="@style/menu_item_txt02"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="6dp"
		        android:drawableTop="@drawable/menu_things"
		        android:text="@string/things_word" />
	    </TableRow>

</LinearLayout>