<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:gravity="center"
       	android:alpha="130"
       	android:layout_marginTop="5dp"
       	android:background="#23B14D"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:text="@string/live_feedback" />

	<TextView 
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:gravity="center"
        android:layout_centerVertical="true"
       	android:alpha="130"
       	android:background="#FFFFFF"
        android:textSize="20dp"
        android:textColor="#23B14D"
        android:text="@string/live_happy" />

	<TextView 
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
       	android:alpha="130"
       	android:background="#ADAAC9"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:text="@string/live_news" />
	
</RelativeLayout>