<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
    <RelativeLayout 
        android:id="@+id/teacher_la"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="#30B1E8" >
    
	    <TextView 
	        android:id="@+id/search1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:textColor="#F6ECCB"
	        android:textSize="20dp"
	        android:text="@string/teacher_search"/>
	    
	    <EditText
	        android:id="@+id/teacher_search_name"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/search1" />
	
	    <Button
	        android:id="@+id/teacher_searchbutton_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@id/teacher_search_name"
	        android:layout_alignBottom="@id/teacher_search_name"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="46dp"
	        android:background="@drawable/search"/>
		
	</RelativeLayout>
	
    <RelativeLayout 
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/teacher_la"
	    android:layout_marginTop="10dp"
	    android:background="#CA4521" >
	    
        <TextView
            android:id="@+id/search2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#F6ECCB"
	        android:textSize="20dp"
	        android:text="@string/teacher_department" />
    
	    <Spinner
	        android:id="@+id/search_department"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/search2" />
	    
	    <Button 
	        android:id="@+id/department_ok_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/search_department"
	        android:text="@string/oks" />
	
	    <Button
	        android:id="@+id/department_re_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:text="@string/res" />
		
	 </RelativeLayout>
</RelativeLayout>